Force scrollbar always to prevent unexpected horizontal shift on transition

--- a/packages/astro/src/css/style.scss
+++ b/packages/astro/src/css/style.scss
@@ -49,6 +49,7 @@ html {
 	background-color: var(--background-color);
 	color: var(--color);
 	font-size: var(--font-size-root);
+	overflow-y: scroll;
 }
 
 html,
